# func

./: .codecov.yaml  .dockerignore  .gitattributes  .gitignore  .golangci.yaml  .gotagsignore  .ko.yaml  .syft.yaml  .unicode-control-characters.config.py  .versionrc  AGENTS.md  ARCHITECTURE.md  AUTHORS  CHANGELOG.md  CLAUDE.md  CODEOWNERS  COMMENT_FOR_MATEJ_TLS_FIXES.md  CONTRIBUTING.md  Dockerfile  Dockerfile.podman-next  Dockerfile.utils  ISSUE_3514_DEEP_ANALYSIS.md  ISSUE_3514_IMPLEMENTATION_PLAN.md  ISSUE_3514_SOLUTION_SUMMARY.md  LICENSE  Makefile  OWNERS  OWNERS_ALIASES  POST_THIS_COMMENT_TO_MATEJ.md  README.md  REVERT_SUMMARY.md  TLS_FIXES_COMPLETE_SUMMARY.md  ci  client.go  client_int_test.go  client_test.go  client_unit_test.go  config.go  config_test.go  filesystem.go  (+47 more)
.chglog/: CHANGELOG.tpl.md  config.yml
.claude/: CLAUDE.md
.githooks/: pre-commit
.github/: pull-request-template.md
appsody/: builder.go  initializer.go  initializer_test.go  runner.go  runner_test.go
builders/: builders.go  builders_test.go
buildpacks/: builder.go  builder_test.go  utils.go
client/: client.go  client_test.go  client_unit_test.go
cloudevents/: emitter.go  emitter_test.go
cmd/: build.go  build_registry_insecure_test.go  build_test.go  client.go  client_test.go  cluster.go  cluster_override.go  completion.go  completion_util.go  config.go  config_ci.go  config_ci_int_test.go  config_ci_test.go  config_envs.go  config_git.go  config_git_remove.go  config_git_set.go  config_labels.go  config_labels_test.go  config_test.go  config_volumes.go  create.go  create_help.go  create_test.go  delete.go  delete_test.go  deploy.go  deploy_test.go  describe.go  describe_test.go  emit.go  environment.go  envs.go  errors.go  (+50 more)
templates/python/http/: .builders.yaml  README.md  app.sh  func.py  manifest.yaml  pyproject.toml  requirements.txt  test_func.py
templates/python/http/function/: func.py
templates/python/http/my_func/: func.py
templates/python/http/tests/: test_func.py
templates/rust/cloudevents/: Cargo.toml  README.md
templates/rust/cloudevents/src/: config.rs  handler.rs  main.rs
(+1506 files in other folders)
