
[package]
name = "function"
version = "0.1.0"
edition = "2018"

[dependencies]
cloudevents-sdk = { version = "0.7.0", features = ["actix"] }
actix-web = "4.3.1"
actix-rt = "2.8.0"
serde_json = "1"
log = "0.4.0"
env_logger = "0.10.0"
regex = "1.5.5"
tokio = "1.8.4"
actix-http = "3.3.1"

[dev-dependencies]
regex = "1.5.5"
tokio = "1.8.4"
actix-http = "3.3.1"
