[package]
name = "function"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
debug = 0
incremental = true
lto = true
opt-level = "z"
strip = "symbols"

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
cloudevents-sdk = { version = "0.7.0", features = ["actix"] }
env_logger = "0.10.0"
log = "0.4.18"
serde_json = "1.0.96"
