[package]
name = "function"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
debug = 0
incremental = true
lto = true
opt-level = "z"
strip = "symbols"

[dependencies]
actix-rt = "2.11.0"
actix-web = "4.13.0"
cloudevents-sdk = { version = "0.9.0", features = ["actix"] }
env_logger = "0.11.10"
log = "0.4.29"
serde_json = "1.0.149"
